web commit by JoshTriplett: Link post-commit.

--- a/doc/tips/issue_tracking.mdwn
+++ b/doc/tips/issue_tracking.mdwn
@@ -93,7 +93,7 @@ project's website. You can check the wiki-format text
 into revision control as part of the software project,
 and tie it into the build system using the Makefile.
 
-Ikiwiki can also be tied into the `post-commit` hook of your revision
+Ikiwiki can also be tied into the [[post-commit]] hook of your revision
 control system, so that whenever a developer commits a change to a wiki
 page in revision control, the project's web site is automatically updated.
 The [[ikiwiki_tutorial|setup]] explains in
