--- a/doc/plugins/rawhtml.mdwn
+++ b/doc/plugins/rawhtml.mdwn
@@ -6,7 +6,7 @@ or xhtml files not as source files but as data files that are copied
 unchanged when the wiki is built. Compared with the [[html]] plugin, which
 treats html files as source files for the wiki, this plugin allows complete
 control over html pages. Note that this means that the html will not be
-sanitised of problimatic content such as javascript, so it can be insecure
+sanitised of problematic content such as javascript, so it can be insecure
 to enable this plugin if untrusted users have write access to your wiki's
 repository.
 
