web commit by JoshTriplett: Use wiki link for sidebar.

--- a/doc/plugins/contrib/navbar.mdwn
+++ b/doc/plugins/contrib/navbar.mdwn
@@ -1,8 +1,7 @@
 [[template id=plugin name=navbar author="[[TobiOetiker]]"]]
 
 The Navbar Plugin renders a Navigation Bar into your page. It is based on code
-from the sidebar plugin see <http://ikiwiki.info/plugins/sidebar.html>
-for details.
+from the [[sidebar_plugin|plugins/sidebar]].
 
 The plugin looks for a page called "navbar" 
 
