web commit by JoshTriplett: Same thing observed via lintian

--- a/doc/bugs/installing_from_svn_copies_.svn_directories.mdwn
+++ b/doc/bugs/installing_from_svn_copies_.svn_directories.mdwn
@@ -16,3 +16,6 @@ cp -aL basewiki/* /home/glasserc/ikidev-install//share/ikiwiki/basewiki
 I don't know of a good fix. I wouldn't have discovered this except that I got 
 permission denied errors when I tried to make a change and install again.
 --Ethan
+
+> I observed the same thing by running debuild from an SVN checkout and
+> getting lintian warnings about the .svn directories. --[[JoshTriplett]]
