web commit by hb

--- a/doc/bugs/word_wrap.mdwn
+++ b/doc/bugs/word_wrap.mdwn
@@ -4,3 +4,5 @@ friend here). Is there any way to improve this?
 
 > See "using the web interface with a real text editor" on the [[tips]]
 > page. --[[JoshTriplett]]
+
+>> Would it be useful to allow a "max width" plugin, which would force on commit the split of long lines ?
