now available in Debian stable

--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -8,9 +8,13 @@ The best place to download a tarball of the latest release is from
 
 # packages
 
-If using Debian unstable or testing, or Ubuntu edgy:
+If using Debian (any version), or Ubuntu edgy:
 
         apt-get install ikiwiki
+
+Note that Debian stable and especially Ubuntu edgy contain older versions of
+ikiwiki, there have been lots of enhancements and bug fixes since those
+versions.
 
 Or download the deb from <http://packages.debian.org/unstable/web/ikiwiki>.
 
