--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.49) UNRELEASED; urgency=low
+ikiwiki (1.49) unstable; urgency=low
 
   [ Joey Hess ]
   * Add --post-commit option, which allows for the case of a split web server
@@ -48,7 +48,7 @@ ikiwiki (1.49) UNRELEASED; urgency=low
   [ Josh Triplett ]
   * Remove stray semicolon in linkmap.pm.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 06 Apr 2007 17:28:22 -0700
+ -- Joey Hess <joeyh@debian.org>  Sun, 08 Apr 2007 16:14:46 -0400
 
 ikiwiki (1.48) unstable; urgency=low
 
