* Add a graphviz plugin. * Suggests: graphviz

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ikiwiki (1.50) UNRELEASED; urgency=low
+
+  [ Josh Triplett ]
+  * Add a graphviz plugin.
+  * Suggests: graphviz
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 09 Apr 2007 01:45:40 -0700
+
 ikiwiki (1.49) unstable; urgency=low
 
   [ Joey Hess ]
