Add enabled/disabled indicator at the top of the smileys page.

--- a/doc/smileys.mdwn
+++ b/doc/smileys.mdwn
@@ -1,3 +1,7 @@
+[[if test="enabled(smiley)"
+     then="This wiki has smileys **enabled**."
+     else="This wiki has smileys **disabled**."]]
+
 This page is used to control what smileys are supported by the wiki.
 Just write the text of a smiley to display it.
 
