Add enabled/disabled indicator at the top of the shortcuts page.

--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -1,3 +1,7 @@
+[[if test="enabled(shortcut)"
+     then="This wiki has shortcuts **enabled**."
+     else="This wiki has shortcuts **disabled**."]]
+
 This page controls what shortcut links the wiki supports.
 
 * [[shortcut name=google url="http://www.google.com/search?q=%s"]]
