--- a/doc/news/version_1.49.mdwn
+++ b/doc/news/version_1.49.mdwn
@@ -20,7 +20,7 @@ ikiwiki 1.49 released with [[toggle text="these changes"]]
    * Hide excess backlinks and expand using CSS trick; control quantiy via
      the numbacklinks setting.
    * Finally apply the index.html patch, with thanks to everyone who worked
-     on and supported creating it (especially Tumov). This adds a "usedirs"
+     on and supported creating it (especially Tuomov). This adds a "usedirs"
      option that makes ikiwiki use foo/index.html instead of foo.html as
      output page names. It is not yet enabled by default.
    * Fix a bug in the img plugin that caused thumbnailed files to not be
