* Enhance helponformatting and related documentation to supply more   information about available preprocessor directives.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,10 @@ ikiwiki (1.50) UNRELEASED; urgency=low
   [ Josh Triplett ]
   * Add a graphviz plugin.
   * Suggests: graphviz
+  * Enhance helponformatting and related documentation to supply more
+    information about available preprocessor directives.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 09 Apr 2007 01:45:40 -0700
+ -- Joey Hess <joeyh@debian.org>  Mon,  9 Apr 2007 14:46:37 -0700
 
 ikiwiki (1.49) unstable; urgency=low
 
