--- a/doc/helponformatting.mdwn
+++ b/doc/helponformatting.mdwn
@@ -58,7 +58,17 @@ form \[link text\]\(url\)
 
 You can also use [[PreProcessorDirective]]s to do additional cool stuff.
 
-[[if test="enabled(smiley)"  then="""
-Also, because this wiki has the smiley plugin enabled, you can
-insert [[smileys]] and some other useful symbols.
+[[if test="enabled(inline)" then="""
+This wiki has the inline plugin enabled, so you can create a [[blog]] on any
+page.
+"""]]
+
+[[if test="enabled(smiley)" then="""
+This wiki has the smiley plugin enabled, so you can insert [[smileys]] and some
+other useful symbols.
+"""]]
+
+[[if test="enabled(shortcut)" then="""
+This wiki has the shortcut plugin enabled, so you can use [[shortcuts]] to link
+to common resources.
 """]]
