Also document template in helponformatting

--- a/doc/helponformatting.mdwn
+++ b/doc/helponformatting.mdwn
@@ -72,3 +72,8 @@ other useful symbols.
 This wiki has the shortcut plugin enabled, so you can use [[shortcuts]] to link
 to common resources.
 """]]
+
+[[if test="enabled(template)" then="""
+This wiki has the template plugin enabled, so you can create and use
+[[templates]] for repeated chunks of parameterized wiki text.
+"""]]
