--- a/debian/changelog
+++ b/debian/changelog
@@ -6,7 +6,7 @@ ikiwiki (1.50) UNRELEASED; urgency=low
   * Enhance helponformatting and related documentation to supply more
     information about available preprocessor directives.
 
- -- Joey Hess <joeyh@debian.org>  Mon,  9 Apr 2007 14:46:37 -0700
+ -- Joey Hess <joeyh@debian.org>  Mon, 09 Apr 2007 19:01:56 -0400
 
 ikiwiki (1.49) unstable; urgency=low
 
@@ -25,7 +25,7 @@ ikiwiki (1.49) unstable; urgency=low
   * Hide excess backlinks and expand using CSS trick; control quantiy via
     the numbacklinks setting.
   * Finally apply the index.html patch, with thanks to everyone who worked
-    on and supported creating it (especially Tumov). This adds a "usedirs"
+    on and supported creating it (especially Tuomov). This adds a "usedirs"
     option that makes ikiwiki use foo/index.html instead of foo.html as
     output page names. It is not yet enabled by default.
   * Fix a bug in the img plugin that caused thumbnailed files to not be
