* Add myself as a co-maintainer, with Joey's approval.

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ ikiwiki (1.50) UNRELEASED; urgency=low
   * Suggests: graphviz
   * Enhance helponformatting and related documentation to supply more
     information about available preprocessor directives.
+  * Add myself as a co-maintainer, with Joey's approval.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 09 Apr 2007 19:01:56 -0400
+ -- Josh Triplett <josh@freedesktop.org>  Mon, 09 Apr 2007 16:35:18 -0700
 
 ikiwiki (1.49) unstable; urgency=low
 
