--- a/doc/todo/Editing_po_files.mdwn
+++ b/doc/todo/Editing_po_files.mdwn
@@ -1,3 +1,3 @@
 ikiwiki could support rendering and editing po files via the web.  Run against
 a software repository, ikiwiki would make for an interesting
-translation-management tool.
+translation-management tool. --[[JoshTriplett]]
