--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -20,7 +20,7 @@ Released 29 April 2006.
 * Should have fully working [[todo/utf8]] support. (./)
 * [[Optimised_rendering|todo/optimisations]] if possible. Deal with other
   scalability issues. _(status: scales to thousands of pages, and approximatly
-  3x as fast as version 1.0)_ (./)
+  3.5 times as fast as version 1.0)_ (./)
 * Improved [[todo/html]] stylesheets and templates.
 * Improved scalable [[logo]]. (./)
 * Support for at other revision control systems aside from svn.
