--- a/debian/changelog
+++ b/debian/changelog
@@ -14,8 +14,9 @@ ikiwiki (1.50) UNRELEASED; urgency=low
     the source page used to create it, ie it's the reverse of %renderedfiles.
   * Use %destsources in htmllink and urlto for 20-50% speedup. Thanks
     Josh Triplett for the idea.
+  * Optimise displaytime, trimming maybe 6% off the build time.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 09 Apr 2007 21:09:32 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 09 Apr 2007 21:42:14 -0400
 
 ikiwiki (1.49) unstable; urgency=low
 
