* Conflicts/Replaces/Provides the unofficial ikiwiki-plugin-table   package, because ikiwiki now provides the table plugin, and thus has   a file overlap with ikiwiki-plugin-table.

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,7 +16,12 @@ ikiwiki (1.50) UNRELEASED; urgency=low
     Josh Triplett for the idea.
   * Optimise displaytime, trimming maybe 6% off the build time.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 09 Apr 2007 21:42:14 -0400
+  [ Josh Triplett ]
+  * Conflicts/Replaces/Provides the unofficial ikiwiki-plugin-table
+    package, because ikiwiki now provides the table plugin, and thus has
+    a file overlap with ikiwiki-plugin-table.
+
+ -- Josh Triplett <josh@freedesktop.org>  Mon, 09 Apr 2007 23:46:18 -0700
 
 ikiwiki (1.49) unstable; urgency=low
 
