web commit by JoshTriplett: Note that our conversion scripts should provide a framework for converters from other wikis.

--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -31,7 +31,9 @@ Released 29 April 2006.
 * No serious known [[bugs]]
 * No severe-to-moderate known [[security]] issues.
 * Conversion support for existing other wikis.
-  (Being worked on for MoinMoin and TWiki by [[Josh_Triplett|JoshTriplett]] and Jamey Sharp)
+  (Being worked on for MoinMoin and TWiki by [[Josh_Triplett|JoshTriplett]]
+  and Jamey Sharp; support for other wikis should fit into the same
+  framework.)
 
 2.0 will also be an opportunity to remove old backwards compiatbility
 features and make other changes to the default configuration. Some things
