web commit by JoshTriplett: Link to goodstuff.

--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -44,7 +44,7 @@ I'm considering:
   which may make getting rid of them hard, and it may be worth keeping them
   so users can list pages without anding them together.
 * Making page/index.html be the default output filename, rather than page.html.
-* Enabling goodstuff by default?
+* Enabling [[plugins/goodstuff]] by default?
 * Possibly making PageSpecs match relative by default, rather than the current absolute
   (see [[Discussion]])
 
