web commit by JoshTriplett: Link pagespecs.

--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -46,7 +46,7 @@ I'm considering:
 * Making page/index.html be the default output filename, rather than page.html.
   _(status: option `usedirs` exists; not yet the default)_
 * Enabling [[plugins/goodstuff]] by default?
-* Possibly making PageSpecs match relative by default, rather than the current absolute
+* Possibly making [[PageSpecs|pagespec]] match relative by default, rather than the current absolute
   (see [[Discussion]])
 
 Estimated release date for 2.0: 29 April 2007.
