* Add libtext-csv-perl to Suggests, for the table plugin.

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,8 +20,9 @@ ikiwiki (1.50) UNRELEASED; urgency=low
   * Conflicts/Replaces/Provides the unofficial ikiwiki-plugin-table
     package, because ikiwiki now provides the table plugin, and thus has
     a file overlap with ikiwiki-plugin-table.
+  * Add libtext-csv-perl to Suggests, for the table plugin.
 
- -- Josh Triplett <josh@freedesktop.org>  Mon, 09 Apr 2007 23:46:18 -0700
+ -- Josh Triplett <josh@freedesktop.org>  Tue, 10 Apr 2007 00:16:06 -0700
 
 ikiwiki (1.49) unstable; urgency=low
 
