--- a/debian/changelog
+++ b/debian/changelog
@@ -21,8 +21,9 @@ ikiwiki (1.50) UNRELEASED; urgency=low
     package, because ikiwiki now provides the table plugin, and thus has
     a file overlap with ikiwiki-plugin-table.
   * Add libtext-csv-perl to Suggests, for the table plugin.
+  * Add libdigest-sha1-perl to Suggests, for sparkline and graphviz.
 
- -- Josh Triplett <josh@freedesktop.org>  Tue, 10 Apr 2007 00:16:06 -0700
+ -- Josh Triplett <josh@freedesktop.org>  Tue, 10 Apr 2007 00:21:41 -0700
 
 ikiwiki (1.49) unstable; urgency=low
 
