* Add libtext-typography-perl to Suggests for the typography plugin.

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,8 +22,9 @@ ikiwiki (1.50) UNRELEASED; urgency=low
     a file overlap with ikiwiki-plugin-table.
   * Add libtext-csv-perl to Suggests, for the table plugin.
   * Add libdigest-sha1-perl to Suggests, for sparkline and graphviz.
+  * Add libtext-typography-perl to Suggests for the typography plugin.
 
- -- Josh Triplett <josh@freedesktop.org>  Tue, 10 Apr 2007 00:21:41 -0700
+ -- Josh Triplett <josh@freedesktop.org>  Tue, 10 Apr 2007 00:24:59 -0700
 
 ikiwiki (1.49) unstable; urgency=low
 
