--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -39,7 +39,8 @@ Released 29 April 2006.
 features and make other changes to the default configuration. Some things
 I'm considering:
 
-* Making OpenID the default auth method.
+* Enabling OpenID by default.  (Need to fix
+  [[bugs/login_page_non-obvious_with_openid]] first.)
 * Dropping GlobLists. However, they can lurk in preferences settings in wikis,
   which may make getting rid of them hard, and it may be worth keeping them
   so users can list pages without anding them together.
