--- a/doc/todo/Document_redirections_for_use_with_usedirs.mdwn
+++ b/doc/todo/Document_redirections_for_use_with_usedirs.mdwn
@@ -13,7 +13,14 @@ Now that ikiwiki supports using page/index.html rather than page.html, how about
 	RewriteCond $1 !^/cgi-bin/
 	RewriteCond $1 !.*/index$
 	RewriteRule (.+).html $1/ [R]
-
+	
+	RewriteCond $1 !^/~
+	RewriteCond $1 !.*/index$
+	RewriteRule (.+).rss $1/index.rss
+	
+	RewriteCond $1 !^/~
+	RewriteCond $1 !.*/index$
+	RewriteRule (.+).atom $1/index.atom
 
 >> Nice solution.  I think this would work for a newly-converted wiki as well,
 >> using a condition to limit rewrites to that wiki's directory, and the
