turn this into a tip

--- a/doc/tips.mdwn
+++ b/doc/tips.mdwn
@@ -1,5 +1,7 @@
 This page is a place to document tips and techniques for using ikiwiki.
 
+[[toc ]]
+
 ## wikiannounce
 
 One thing I use ikiwiki for is the web pages for software projects I
@@ -33,3 +35,8 @@ access. --[[JoshTriplett]]
 [[This_article|issue_tracking]] has some thoughts and tips on using ikiwiki
 as a BTS, as is done on this very wiki to track [[bugs]] and [[todo]] items
 for ikiwiki.
+
+## redirections for usedirs
+
+Want to turn on the `usedirs` setting on an existing wiki without breaking
+all the links into it? Here's [[how|usedirs_redirections]].
