* Add postformtext parameter to inline.

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,7 +24,10 @@ ikiwiki (1.50) UNRELEASED; urgency=low
   * Add libdigest-sha1-perl to Suggests, for sparkline and graphviz.
   * Add libtext-typography-perl to Suggests for the typography plugin.
 
- -- Josh Triplett <josh@freedesktop.org>  Tue, 10 Apr 2007 00:24:59 -0700
+  [ Joey Hess ]
+  * Add postformtext parameter to inline.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 11 Apr 2007 23:59:25 -0400
 
 ikiwiki (1.49) unstable; urgency=low
 
