--- a/doc/plugins/inline.mdwn
+++ b/doc/plugins/inline.mdwn
@@ -30,6 +30,7 @@ directive:
 * `feeds` - controls generation of all types of feeds. Set to "no" to
   disable generating any feeds.
 * `postform` - Set to "yes" to enables a form to post new pages to a [[blog]].
+* `postformtext` - Set to specify text that is displayed in a postform.
 * `rootpage` - Also enables a form to post new pages to a [[blog]], and
   allows specifying of a page that is used as the parent page for new pages.
 * `archive` - If set to "yes", only list page titles and some metadata, not
