--- a/doc/plugins/contrib.mdwn
+++ b/doc/plugins/contrib.mdwn
@@ -1,7 +1,8 @@
 Contributed [[plugins]]:
 
 [[inline pages="plugins/contrib/* !*/Discussion" archive="yes"
-rootpage="plugins/contrib" postformtext="Add a new plugin named:" show=0]]
+rootpage="plugins/contrib" postformtext="Add a new third-party plugin named:"
+show=0]]
 
 # Installing third party plugins
 
