web commit by http://adam.shand.net/

--- a/doc/plugins/rawhtml/discussion.mdwn
+++ b/doc/plugins/rawhtml/discussion.mdwn
@@ -1,3 +1,5 @@
 Is there anyway to allow this only on locked pages?  I'd like to be able to do raw HTML on certain pages (eg. on the sidebar page) but don't want to allow it on the entire wiki.  Thanks -- Adam.
 
 > Not at the moment. Long-term, ikiwiki needs some general permission mechanisms that encompass this sort of issue. --[[JoshTriplett]]
+
+>> Thanks.  Bummer though, looking forward to when this is possible. :-) -- Adam.
