web commit by tschwinge: Question about git repository w.r.t. .ikiwiki directory.

--- a/doc/setup/discussion.mdwn
+++ b/doc/setup/discussion.mdwn
@@ -15,3 +15,6 @@ working copy. You can always clone the repository if you want your own local
 working copy. Furthermore, this allows you to make multiple commits to your
 working copy before pushing them to the repository and causing the wiki to
 update. --[[JoshTriplett]]
+
+Furthermore the git instructions should be changed to move the *.ikiwiki*
+directory back into the wiki's working copy directory, isn't it? --[[tschwinge]]
