--- a/doc/bugs/Feeds_link_to_index.html_instead_of_directory.mdwn
+++ b/doc/bugs/Feeds_link_to_index.html_instead_of_directory.mdwn
@@ -22,4 +22,14 @@ Index: IkiWiki/Plugin/inline.pm
 +               my $u=URI->new(encode_utf8($config{url}."/".urlto($p, "")));
  
                 my $pcontent = absolute_urls(get_inline_content($p, $page), $url);
+
+@@ -415,7 +415,7 @@
+ 
+        foreach my $page (keys %toping) {
+                my $title=pagetitle(basename($page), 0);
+-               my $url="$config{url}/".htmlpage($page);
++               my $url="$config{url}/".urlto($page, "");
+                foreach my $pingurl (@{$config{pingurl}}) {
+                        debug("Pinging $pingurl for $page");
+                        eval {
 </pre>
