--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -49,6 +49,7 @@ Personal sites and blogs
 * [Schabis blaue Seite](http://schabi.de) - I abuse ikiwiki as blog/cms combo, and will migrate all existing content into ikiwiki eventually.
 * [Ben Coffey's blog and personal site](http://inelegant.org/).
 * [blog of LukClaes](http://zomers.be/~luk/blog/).
+* [Per Olofsson](http://people.dsv.su.se/~pelle/)
 
 Please feel free to add your own ikiwiki site!
 
