web commit by TobiOetiker: added link to insights page

--- a/doc/plugins/contrib/navbar.mdwn
+++ b/doc/plugins/contrib/navbar.mdwn
@@ -30,6 +30,8 @@ Include this into your templates.
 To make a nice menu, some css magic is required, but since this is required to make
 ikiwiki look good anyway, I won't go into details here ... 
 
+See the navbar in action on http://insights.oetiker.ch
+
 Tobi Oetiker 2006.12.30    
 
 If you are interested in this, drop me a line tobi at oetiker dot ch
