* Internal version number and installdir substitutions were lost, fix.

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,8 +26,9 @@ ikiwiki (1.50) UNRELEASED; urgency=low
 
   [ Joey Hess ]
   * Add postformtext parameter to inline.
+  * Internal version number and installdir substitutions were lost, fix.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 11 Apr 2007 23:59:25 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 13 Apr 2007 14:40:28 -0400
 
 ikiwiki (1.49) unstable; urgency=low
 
