--- a/doc/todo/Support_XML-RPC-based_blogging.mdwn
+++ b/doc/todo/Support_XML-RPC-based_blogging.mdwn
@@ -7,4 +7,6 @@ blog names would work. --[[JoshTriplett]]
 > This would be a great thing to add a plugin for. (Probably using the cgi
 > hook to let ikiwiki act as an RPC server. --[[Joey]]
 
+>> I'd love to see support for this and would be happy to contribute towards a bounty (say US$100) :-).  [PmWiki](http://www.pmwiki.org/) has a plugin which [implements this](http://www.pmwiki.org/wiki/Cookbook/XMLRPC) in a way which seems fairly sensible as an end user.  --[[AdamShand]]
+
 [[tag soc]]
