--- a/debian/changelog
+++ b/debian/changelog
@@ -27,8 +27,10 @@ ikiwiki (1.50) UNRELEASED; urgency=low
   [ Joey Hess ]
   * Add postformtext parameter to inline.
   * Internal version number and installdir substitutions were lost, fix.
+  * Apply patch from Ethan to improve an error message that should never
+    happen.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 13 Apr 2007 14:40:28 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 14 Apr 2007 16:06:01 -0400
 
 ikiwiki (1.49) unstable; urgency=low
 
