--- a/doc/news/version_1.49.mdwn
+++ b/doc/news/version_1.49.mdwn
@@ -1,7 +1,7 @@
 News for ikiwiki 1.49:
 
    Third-party plugins that use htmlpage() or abs2rel() to generate links
-   may need changes to support the new "userdir" option.
+   may need changes to support the new "usedirs" option.
 
 ikiwiki 1.49 released with [[toggle text="these changes"]]
 [[toggleable text="""
