--- a/doc/bugs/Feeds_link_to_index.html_instead_of_directory.mdwn
+++ b/doc/bugs/Feeds_link_to_index.html_instead_of_directory.mdwn
@@ -1,5 +1,7 @@
 When --usedirs is used, RSS and Atom feeds seem to link to the index.html directly, both for the site and for the feed items, instead of the directory, as pages otherwise do.
 
+Thanks, that had been annoying me too. [[done]] --[[Joey]]
+
 Patch:
 
 <pre>
