--- a/debian/changelog
+++ b/debian/changelog
@@ -32,8 +32,10 @@ ikiwiki (1.50) UNRELEASED; urgency=low
   * Patch from Tuomov to link to the directory in feeds when usedirs is in
     effect. Note that this changes permalinks, so if you are already using
     usedirs you'll have to deal with that on upgrade to this version.
+  * Add feedshow parameter to inline, which can be useful for eg, removing
+    old posts from feeds when permalinks change.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 14 Apr 2007 16:11:30 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 14 Apr 2007 16:52:46 -0400
 
 ikiwiki (1.49) unstable; urgency=low
 
