--- a/doc/tips/howto_avoid_flooding_aggregators.mdwn
+++ b/doc/tips/howto_avoid_flooding_aggregators.mdwn
@@ -15,11 +15,11 @@ This can happen in a lot of situations:
 
 To avoid annoying readers in these situations, it's a good idea to remove
 and existing items from your blog's news feed. That way only new items will
-show up in the aggregator. The best way to do this is currently to modify
-the [[PageSpec]] for your [[blog]] and add a condition such as:
+show up in the aggregator. The best way to do this is to add a `feedpages`
+parameter to the `inline` directive for your blog, with a condition such as:
 
-	and created_after(blog/posts/old_post)
+	feedpages=created_after(blog/posts/old_post)
 
 Where "old_post" is the name of the last post you made to the blog before
-making the change. This will limit the feed to only newer posts (the older
-posts will still be available in the archives).
+making the change. This will limit the feed to only newer posts, while stil
+displaying the old posts in the blog page.
