use feedpages to limit all feeds to new items, in preparation for switching ikiwiki.info to usedirs

--- a/doc/patchqueue.mdwn
+++ b/doc/patchqueue.mdwn
@@ -5,4 +5,6 @@ Feel free to either copy the patch inline, or link to one elsewhere (or nag
 [[Joey]] to open up anonymous svn access to this wiki so you can check in the
 patches directly).
 
-[[inline pages="patchqueue/* and !*/Discussion" rootpage="patchqueue" archive="yes"]]
+[[inline pages="patchqueue/* and !*/Discussion"
+feedpages="created_after(enable-htaccess-files)"
+rootpage="patchqueue" archive="yes"]]
