--- a/doc/plugins.mdwn
+++ b/doc/plugins.mdwn
@@ -15,5 +15,6 @@ by default. To enable other plugins, use the `--plugin` switch described in
 # Plugin directory
 
 [[inline pages="plugins/* and !plugins/type/* and !plugins/write and
-!plugins/contrib and !*/Discussion" archive="yes"
+!plugins/contrib and !*/Discussion"
+feedpages="created_after(graphviz)" archive="yes"
 rootpage="plugins/contrib" postformtext="Add a new plugin named:" show=0]]
