--- a/doc/tips.mdwn
+++ b/doc/tips.mdwn
@@ -1,4 +1,5 @@
 This page is a place to document tips and techniques for using ikiwiki.
 
-[[inline pages="tips/* and !*/Discussion" archive="yes"
+[[inline pages="tips/* and !*/Discussion" 
+feedpages="created_after(howto_avoid_flooding_aggregators)" archive="yes"
 rootpage="tips" postformtext="Add a new tip about:" show=0]]
