--- a/doc/news.mdwn
+++ b/doc/news.mdwn
@@ -2,7 +2,8 @@ This is where announcements of new releases, features, and other news are
 posted. [[IkiWikiUsers]] are recommended to subscribe to this page's RSS
 feed.
 
-[[inline pages="news/* and !*/Discussion" rootpage="news" show="30"]]
+[[inline pages="news/* and !*/Discussion"
+feedpages="created_after(version_1.49)" rootpage="news" show="30"]]
 
 By the way, some other pages with RSS feeds about ikiwiki include
 [[plugins]], [[TODO]] and [[bugs]].
