--- a/doc/plugins/contrib.mdwn
+++ b/doc/plugins/contrib.mdwn
@@ -1,6 +1,7 @@
 Contributed [[plugins]]:
 
-[[inline pages="plugins/contrib/* !*/Discussion" archive="yes"
+[[inline pages="plugins/contrib/* !*/Discussion" 
+feedpages="created_after(navbar)" archive="yes"
 rootpage="plugins/contrib" postformtext="Add a new plugin named:" show=0]]
 
 # Installing third party plugins
