--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -3,4 +3,5 @@ Welcome to ikiwiki's todo list. Link items to [[todo/done]] when done.
 Also see the [Debian bugs](http://bugs.debian.org/ikiwiki).
 
 [[inline pages="todo/* and !todo/done and !link(todo/done) and !*/Discussion"
+feedpages="created_after(supporting_comments_via_disussion_pages)"
 actions=yes rootpage="todo" show=0]]
