--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -19,7 +19,7 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=cpan url="http://search.cpan.org/search?mode=dist&query=%s"]]
 * [[shortcut name=ctan url="http://tug.ctan.org/cgi-bin/ctanPackageInformation.py?id=%s"]]
 * [[shortcut name=hoogle url="http://haskell.org/hoogle/?q=%s"]]
-* [[shortcut name=iki url="http://ikiwiki.info/%s.html"]]
+* [[shortcut name=iki url="http://ikiwiki.info/%s/"]]
 * [[shortcut name=ljuser url="http://%s.livejournal.com/"]]
 * [[shortcut name=rfc url="http://www.ietf.org/rfc/rfc%s.txt"]]
 * [[shortcut name=c2 url="http://c2.com/cgi/wiki?%s"]]
