--- a/doc/soc/application.mdwn
+++ b/doc/soc/application.mdwn
@@ -34,11 +34,13 @@ Based on ["What should a mentoring organization application look like?"](http://
 
 6. **What license does your project use?**
 
-    ikiwiki uses the GNU General Public License.  The basewiki, incorporated into users' wikis, uses an all-permissive license.  See <http://ikiwiki.info/freesoftware.html> for details.
+    ikiwiki uses the GNU General Public License.  The basewiki,
+    incorporated into users' wikis, uses an all-permissive license.  See
+    <http://ikiwiki.info/freesoftware/> for details.
 
 7. **What is the URL for your ideas page?**
 
-    <http://ikiwiki.info/soc.html>
+    <http://ikiwiki.info/soc/>
 
 8. **What is the main development mailing list for your organization?**
 
@@ -83,7 +85,7 @@ Based on ["What should a mentoring organization application look like?"](http://
 
 16. **What steps will you take to encourage students to interact with your project's community before, during and after the program?**
 
-    Before the program, we will encourage any students interested in working on ikiwiki to contact us.  We will advise them to create an account on the ikiwiki ikiwiki, look over the TODO items (<http://ikiwiki.info/todo.html>), add ideas of their own, and discuss existing ideas.  We will also help them set up their own ikiwikis, both for experimentation and for actual use.  We will suggest that students begin looking at the ikiwiki codebase and asking questions.
+    Before the program, we will encourage any students interested in working on ikiwiki to contact us.  We will advise them to create an account on the ikiwiki ikiwiki, look over the TODO items (<http://ikiwiki.info/todo/>), add ideas of their own, and discuss existing ideas.  We will also help them set up their own ikiwikis, both for experimentation and for actual use.  We will suggest that students begin looking at the ikiwiki codebase and asking questions.
 
     During the program, we would like all students working on projects to create a user page with an activity blog, and update that blog regularly with the status of their project.  We also plan to aggregate these blogs into a single Summer of Code newsfeed, and suggest that students subscribe to this feed; this will allow them to observe the activity of their fellow students, to spur each other forward and help each other along the way.  We plan to accept incremental patches towards a feature, or support students who wish to create their own branch.
 
