web commit by JoshTriplett: Fix typos.

--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -1,11 +1,11 @@
-This is the roadmap for ikiwiki drevelopment.
+This is the roadmap for ikiwiki development.
 
 # 1.0
 
 Generally usable release.
 
 * No severe [[security]] bugs. (./)
-* All the [[features]] people would expect in a wiki. Needs to be a plausable
+* All the [[features]] people would expect in a wiki. Needs to be a plausible
   promise of being a wiki that people can commit to [[using|ikiwikiusers]].
   (./)
 
@@ -35,7 +35,7 @@ Released 29 April 2006.
   and Jamey Sharp; support for other wikis should fit into the same
   framework.)
 
-2.0 will also be an opportunity to remove old backwards compiatbility
+2.0 will also be an opportunity to remove old backwards compatibility
 features and make other changes to the default configuration. Some things
 I'm considering:
 
