--- a/doc/tips/redirections_for_usedirs.mdwn
+++ b/doc/tips/redirections_for_usedirs.mdwn
@@ -9,14 +9,14 @@ be adapted to other situations.
 	RewriteCond $1 !^/ajaxterm   # the wiki, so
 	RewriteCond $1 !^/cgi-bin/   # don't rewrite them
 	RewriteCond $1 !.*/index$
-	RewriteRule (.+).html $1/ [R]
+	RewriteRule (.+).html$ $1/ [R]
 	
 	# rss feeds
 	RewriteCond $1 !^/~
 	RewriteCond $1 !.*/index$
-	RewriteRule (.+).rss $1/index.rss
+	RewriteRule (.+).rss$ $1/index.rss
 	
 	# atom feeds
 	RewriteCond $1 !^/~
 	RewriteCond $1 !.*/index$
-	RewriteRule (.+).atom $1/index.atom
+	RewriteRule (.+).atom$ $1/index.atom
