web commit by JoshTriplett: Remove <ikiroot> placeholder, and make absolute image reference actually absolute.

--- a/doc/plugins/img.mdwn
+++ b/doc/plugins/img.mdwn
@@ -29,6 +29,6 @@ the page, unless overridden. Useful when including many images on a page.
 	\[[img photo2.jpg]]
 	\[[img photo3.jpg size=200x600]]
 
-You can also reference an image in <ikiroot>/images like this:
+You can also reference an image in /images like this:
 
-	\[[img images/photo3.jpg size=200x600]]
+	\[[img /images/photo3.jpg size=200x600]]
