--- a/debian/changelog
+++ b/debian/changelog
@@ -34,8 +34,10 @@ ikiwiki (1.50) UNRELEASED; urgency=low
     usedirs you'll have to deal with that on upgrade to this version.
   * Add feedshow parameter to inline, which can be useful for eg, removing
     old posts from feeds when permalinks change.
+  * Add .dpkg-tmp to prune regexp, so that if ikiwiki is run right as it's
+    being upgraded by dpkg it will ignore dpkg temp files in the basewiki.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 14 Apr 2007 16:52:46 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 15 Apr 2007 14:09:54 -0400
 
 ikiwiki (1.49) unstable; urgency=low
 
